@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-30T08:20:48Z",
+  "timestamp" : "2022-08-31T02:00:24Z",
   "count_outdated" : 490,
   "uniques_outdated" : 283,
-  "count" : 514,
+  "count" : 515,
   "uniques" : 298,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
