@@ -1,3 +1,11 @@
+2022-08-31T02:00:24Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2960811745
+* notice: last 14d: unq all: 5 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 490 / 298 514
+* notice: next accum: outdated-unq outdated-all / unq all: 283 490 / 298 515
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-08-30T08:20:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2954655271
 * notice: last 14d: unq all: 5 24
